--- a/omelas.html
+++ b/omelas.html
@@ -97,12 +97,12 @@
       background-color: var(--select-color);
     }
 
-    </style>
-    <script>
-     function toggleTheme() {
+  </style>
+  <script>
+    function toggleTheme() {
       document.documentElement.classList.toggle('dark')
     }
-    </script>
+  </script>
 </head>
 <body>
 
@@ -120,7 +120,13 @@
     <h3>Omelas</h3>
     <h3 class="link" onclick="window.location.href='https://shsdavisapes.pbworks.com/f/Omelas.pdf'">From "The Ones Who Walk Away From Omelas"</h3>
     <p class="content">
-      Nothing here yet, there will be soon, hopefully, but there isnt just yet, why are you still here, go read something else ive written, or just read something else in general, or just do anything other than stare at this blank page.
+      <i>Those Who Walk Away From Omelas</i> by Ursula Le Guin is a very interesting exploration into the idea of utilitarianism and the most extreme form some people imagine it taking. The story depicts a city by the name of Omelas where all of the people live incredibly happy and prosperous lives with all of their needs and desires easily met by the vast wealth of the city. All of the citizens, that is, except for one. Underground beneath one of the buildings there is a child who is subjected to absolute misery and brutality. This child is tortured and starved and generally forced to live the worst sort of life imaginable. The question seemingly presented by this story is whether or not the suffering of this child is permissible for all of the benefits their suffering provide to the rest of the society. The stance Le Guin seems to present is that the suffering of this child is unacceptable and that it should be prevented even at the cost of losing the benefits given to the rest of the society.
+    </p>
+    <p class="content">
+      This position can be viewed in multiple ways in relation to the idea of utilitarianism. The first conclusion is that this is a rebuke of utilitarianism and the idea that the suffering of a small number of people is acceptable if it benefits the larger whole. The second conclusion is not a rebuke of utilitarianism but rather a rebuke of the idea that utilitarianism permits massive harm to a small number of people for massive gain to a larger group of people. Studies have shown that wealth and prosperity will only increase ones happiness to a certain extent, and once you have your needs and wants met any excess wealth will have diminishing value in terms of your happiness. With this knowledge we can read this story as promoting utilitarianism with the understanding that massive suffering by a small group for the massive benefit of a larger group does not maximize utility but rather diminishes it.
+    </p>
+    <p class="content">
+      In addition to exploring the ideas of utilitarianism and many utilitarian thinkers <i>Those Who Walk Away From Omelas</i> also makes a point about passivity and complicity in harmful systems. Within the city of Omelas every single citizen is shown exactly how their home has such incredible wealth and prosperity and it is explained to every one of them that were they to show any form of kindness or generosity to the child upon whos suffering the system rests, that the entire system would permanently and irrevocably collapse, turning Omelas into just another city. In response to this many citizens choose to leave Omelas, never to return. This however, is not a righteous rebellion against an unjust system but rather an abdication of their moral responsibility. These citizens clearly know that what Omelas is doing is wrong and it is stated in the story that every citizen knows exactly how to end the system. Further every one of them is given the opportunity to simply not be cruel to the child and thereby break the cruel system. Despite this combination of knowledge and opportunity none of them ever take the chance to destroy the system, showing how they are complicit in its cruelty.
     </p>
     <div class="themeButton" onclick="toggleTheme()">Dark Mode</div>
   </section>
