--- a/ethics.html
+++ b/ethics.html
@@ -108,7 +108,7 @@
   <div onclick="window.location.href='https://maretheu.github.io/art.html'">My Art</div>
   <div onclick="window.location.href='https://maretheu.github.io/resume.html'">Resume</div>
   <div onclick="window.location.href='https://maretheu.github.io/ethics.html'">Ethics Writing<br>You are here</div>
-  <div onclick="window.location.href='https://maretheu.github.io/links.html'">Links</div>
+  <div onclick="window.location.href='https://maretheu.github.io/contact.html'">Contact</div>
 </h4>
 
 <main>
