--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
   <div onclick="window.location.href='https://maretheu.github.io/art.html'">My Art</div>
   <div onclick="window.location.href='https://maretheu.github.io/resume.html'">Resume</div>
   <div onclick="window.location.href='https://maretheu.github.io/ethics.html'">Ethics Writing</div>
-  <div onclick="window.location.href='https://maretheu.github.io/links.html'">Links</div>
+  <div onclick="window.location.href='https://maretheu.github.io/contact.html'">Contact</div>
 </h4>
 
 <main>
